# ets-vibes

./: .gitignore  CHANGELOG.md  README.md  RELEASES.md
.github/workflows/: cli-release.yml  desktop-release.yml
apps/cli/: README.md  build_entry.py  pyproject.toml
apps/cli/ets_vibes/: __init__.py  cli.py  compression.py  editor.py  games.py  parser.py  profile.py
