[project]
name = "ets-vibes"
version = "1.0.0"
description = "Save Editor for Euro Truck Simulator 2 and American Truck Simulator"
authors = [{ name = "Carlos" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ets2", "ats", "euro-truck-simulator", "save-editor", "game-modding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
]

dependencies = [
    "rich>=13.0",
    "typer>=0.9",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pyinstaller>=6.0",
    "ruff>=0.1",
]

[project.scripts]
ets-vibes = "ets_vibes.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ets_vibes"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
